<resources>
    <string name="app_name">Booking Android App</string>
    <string name="booking_student_label">Enter booking student</string>
    <string name="booking_name_label">Enter booking name</string>
    <string name="booking_room_label">Enter room name</string>
    <string name="booking_date_label">Enter date</string>
    <string name="booking_time_label">Enter time</string>
    <string name="button_lookup">Lookup bookings</string>
    <string name="button_insert">Insert booking</string>
    <string name="button_delete">Delete booking</string>
    <string name="booking_service_label">Enter booking URL</string>
    <string name="initial_url">http://192.168.20.9:8080/Booking_Web_Service/web_service/students/</string>
</resources>