<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/student_label"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/booking_student_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/insert_student_edit"
        app:layout_constraintEnd_toStartOf="@+id/insert_student_edit"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/insert_student_edit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/student_label"
        app:layout_constraintEnd_toStartOf="@+id/insert_button"
        app:layout_constraintHorizontal_bias="0.5" />

    <Button
        android:id="@+id/insert_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="insertBooking"
        android:text="@string/button_insert"
        app:layout_constraintBaseline_toBaselineOf="@+id/insert_student_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/insert_student_edit"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/booking_label"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/booking_name_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/insert_booking_edit"
        app:layout_constraintEnd_toStartOf="@+id/insert_booking_edit"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_label" />
    <EditText
        android:id="@+id/insert_booking_edit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/insert_student_edit"
        app:layout_constraintStart_toEndOf="@+id/booking_label"
        app:layout_constraintEnd_toStartOf="@+id/insert_button"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/room_label"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/booking_room_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/insert_room_edit"
        app:layout_constraintEnd_toStartOf="@+id/insert_room_edit"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/booking_label" />
    <EditText
        android:id="@+id/insert_room_edit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/insert_booking_edit"
        app:layout_constraintStart_toEndOf="@+id/room_label"
        app:layout_constraintEnd_toStartOf="@+id/insert_button"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/date_label"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/booking_date_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/insert_date_edit"
        app:layout_constraintEnd_toStartOf="@+id/insert_date_edit"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/room_label" />
    <EditText
        android:id="@+id/insert_date_edit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/insert_room_edit"
        app:layout_constraintStart_toEndOf="@+id/date_label"
        app:layout_constraintEnd_toStartOf="@+id/insert_button"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/time_label"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/booking_time_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/insert_time_edit"
        app:layout_constraintEnd_toStartOf="@+id/insert_time_edit"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_label" />
    <EditText
        android:id="@+id/insert_time_edit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/insert_date_edit"
        app:layout_constraintStart_toEndOf="@+id/time_label"
        app:layout_constraintEnd_toStartOf="@+id/insert_button"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/url_label"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/booking_service_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/url_edit"
        app:layout_constraintEnd_toStartOf="@+id/url_edit"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_label" />

    <EditText
        android:id="@+id/url_edit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:inputType="textUri"
        android:text="@string/initial_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/url_label"
        app:layout_constraintTop_toBottomOf="@id/time_label" />
    <TextView
        android:id="@+id/bookings_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:text=""
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@id/url_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>