<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/student_label"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/booking_student_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/delete_student_edit"
        app:layout_constraintEnd_toStartOf="@+id/delete_student_edit"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/delete_student_edit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/student_label"
        app:layout_constraintEnd_toStartOf="@+id/delete_button"
        app:layout_constraintHorizontal_bias="0.5" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="deleteBooking"
        android:text="@string/button_delete"
        app:layout_constraintBaseline_toBaselineOf="@+id/delete_student_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/delete_student_edit"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/booking_label"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/booking_name_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/delete_booking_edit"
        app:layout_constraintEnd_toStartOf="@+id/delete_booking_edit"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_label" />
    <EditText
        android:id="@+id/delete_booking_edit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/delete_student_edit"
        app:layout_constraintStart_toEndOf="@+id/booking_label"
        app:layout_constraintEnd_toStartOf="@+id/delete_button"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/url_label"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/booking_service_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/url_edit"
        app:layout_constraintEnd_toStartOf="@+id/url_edit"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/booking_label" />

    <EditText
        android:id="@+id/url_edit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:inputType="textUri"
        android:text="@string/initial_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/url_label"
        app:layout_constraintTop_toBottomOf="@id/booking_label" />
    <TextView
        android:id="@+id/bookings_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:text=""
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@id/url_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

    <LinearLayout
        app:layout_constraintStart_toStartOf="@id/bookings_view"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/lookup_nav_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Lookup" />

        <Button
            android:id="@+id/insert_nav_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Insert" />

        <Button
            android:id="@+id/delete_nav_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Delete" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>